added css for .page-head

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -7,6 +7,9 @@
     <!-- This is the Web Page Title  -->
     <title>Malcolm Lismore Photography</title>
 
+    <!-- Page Title Icon  -->
+     <link rel="icon" type="image/png" href="resources/m-icon.png">
+
     <!-- Linking With Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,10 +28,10 @@
     <header>
 
         <!-- This is the Logo  -->
-        <img class="page-logo-img" src="resources/logo-black.png" alt="Malcolm Lismore Photography Logo" width="15%">
+        <img class="page-logo-img" src="resources/logo-black.png" alt="Malcolm Lismore Photography Logo">
 
         <!-- This is The Navigation Bar -->
-        <div class="navigation-bar">
+        <div id="navigation-bar" class="navigation-bar">
             <nav>
                 <a href="" class="navigation-bar-items">Home</a>
                 <a href="" class="navigation-bar-items">About Me</a>
@@ -37,12 +40,12 @@
                 <a href="" class="navigation-bar-items">Contact Me</a>
             </nav>
         </div>
+        <div style="clear: both;"></div>
 
         <!-- This is the page Head  -->
         <div class="page-head">
             <h1>Malcolm Lismore Photography</h1>
             <p id="motto">Capturing Emotions Through the Lens...</p>
-            <img src="resources/cam-lens-bg-pic.jpg" alt="Camera Lens Background Photo" width="50%">
         </div>
 
     </header>
