Updated my portfolio website

--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
 
             <!-- projects as Cards -->
             <div class="projects_cards">
+                <h3>A portfolio website for a photographer.</h3>
+                <p>A photographer named "Malcolm Lismore" is looking for new ways to promote his business and has approached me to develop a website
+                    that will act as a showcase of his photography skills and allow users to make enquires about hiring
+                    him for weddings and special occasions. </p>
+                <p class="projects_languages">HTML5 | CSS3 | JavaScript | Visual Studio Code</p>
+                <h5 class="in_development">In Development</h5>
+                <a href="https://saviska-jay.github.io/Malcolm Lismore Photography/index.html" target="_blank"><button
+                        class="button-container projects_button view">Visit The Web Page</button></a>
+                <a href="https://github.com/Saviska-Jay/Saviska-Jay.github.io/tree/6545128f8f3e4c272e1303e9a75ce56052c520ec/Malcolm%20Lismore%20Photography"
+                    target="_blank"><button class="button-container projects_button source">View Source
+                        Code</button></a>
+            </div>
+
+            <div class="projects_cards">
                 <h3>A Database Solution For Quiet Attic Films Company</h3>
                 <p>Design and implement a database system with GUI.</p>
                 <p class="projects_languages">C# | SQL | Visual Studio</p>
@@ -268,12 +282,12 @@
         <div class="converter">
             <h3><u>Enter a value to calculate °C to °F </u></h3>
             <h3><label class="converter_label" for="C">Celcius (°C) : </label>
-            <input type="number" id="C">
-            <br>
-            <button class="projects_button converter_button" onclick="Convert()"> Convert </button>
-            <br>
-            <span id="result"></span>
-        </h3>
+                <input type="number" id="C">
+                <br>
+                <button class="projects_button converter_button" onclick="Convert()"> Convert </button>
+                <br>
+                <span id="result"></span>
+            </h3>
 
         </div>
 
@@ -333,12 +347,12 @@
         <h2>Connect with me via...</h2>
 
         <div class="all_social_icon">
-            <a href="https://github.com/Saviska-Jay" target="_blank"><img src="resources/GitHub_logo.png" class="social_icon" 
-                    alt="GitHub Logo"  ></a>
+            <a href="https://github.com/Saviska-Jay" target="_blank"><img src="resources/GitHub_logo.png"
+                    class="social_icon" alt="GitHub Logo"></a>
             <a href="https://www.linkedin.com/in/saviska-jayawickrama/" target="_blank"><img
-                    src="resources/linkedIn_logo.png" alt="LinkedIn"   class="social_icon"></a>
+                    src="resources/linkedIn_logo.png" alt="LinkedIn" class="social_icon"></a>
             <a href="https://www.instagram.com/saviska.jay/" target="_blank"><img src="resources/instagram_logo.png"
-                    alt="Instagram Logo"   class="social_icon"></a>
+                    alt="Instagram Logo" class="social_icon"></a>
         </div>
     </section>
 
