--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -8,12 +8,14 @@
     <title>Malcolm Lismore Photography</title>
 
     <!-- Page Title Icon  -->
-     <link rel="icon" type="image/png" href="resources/m-icon.png">
+    <link rel="icon" type="image/png" href="resources/m-icon.png">
 
     <!-- Linking With Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,24 +61,36 @@
         <div class="gallery-cards-area">
 
             <div class="gallery-card">
-                <img class="gallery-preview-slideshow1 animate-fading" src="" alt="Image 1.1">
-                <img class="gallery-preview-slideshow1 animate-fading" src="" alt="Image 1.2">
-                <img class="gallery-preview-slideshow1 animate-fading" src="" alt="Image 1.3">
-                <p class="gallery-card-info">text text text</p>
+                <img class="gallery-preview-slideshow1 animate-fading" src="resources/wedding/WeddingPic1.jpg"
+                    alt="Image 1.1">
+                <img class="gallery-preview-slideshow1 animate-fading" src="resources/wedding/WeddingPic2.jpg"
+                    alt="Image 1.2">
+                <img class="gallery-preview-slideshow1 animate-fading" src="resources/wedding/WeddingPic3.jpg"
+                    alt="Image 1.3"><br>
+                <p class="gallery-card-info">Here are some Classic and Elegant Moments from My Clients' Wedding Days...
+                </p>
             </div>
 
             <div class="gallery-card">
-                <img class="gallery-preview-slideshow2 animate-fading" src="" alt="Image 2.1">
-                <img class="gallery-preview-slideshow2 animate-fading" src="" alt="Image 2.2">
-                <img class="gallery-preview-slideshow2 animate-fading" src="" alt="Image 2.3">
-                <p class="gallery-card-info">text text text</p>
+                <img class="gallery-preview-slideshow2 animate-fading" src="resources/Graduation/GratuationPic1.jpg"
+                    alt="Image 2.1">
+                <img class="gallery-preview-slideshow2 animate-fading" src="resources/Graduation/GratuationPic2.jpg"
+                    alt="Image 2.2">
+                <img class="gallery-preview-slideshow2 animate-fading" src="resources/Graduation/GratuationPic3.jpg"
+                    alt="Image 2.3"><br>
+                <p class="gallery-card-info">Here are some Proud and Memorable Moments from My Clients' Graduation
+                    Days...</p>
             </div>
 
             <div class="gallery-card">
-                <img class="gallery-preview-slideshow3 animate-fading" src="" alt="Image 3.1">
-                <img class="gallery-preview-slideshow3 animate-fading" src="" alt="Image 3.2">
-                <img class="gallery-preview-slideshow3 animate-fading" src="" alt="Image 3.3">
-                <p class="gallery-card-info">text text text</p>
+                <img class="gallery-preview-slideshow3 animate-fading" src="resources/wildlife/WidelifePic1.jpeg"
+                    alt="Image 3.1">
+                <img class="gallery-preview-slideshow3 animate-fading" src="resources/wildlife/WidelifePic2.jpeg"
+                    alt="Image 3.2">
+                <img class="gallery-preview-slideshow3 animate-fading" src="resources/wildlife/WidelifePic3.jpeg"
+                    alt="Image 3.3"><br>
+                <p class="gallery-card-info">Here are some Stunning and Majestic Moments from My Wildlife Photography
+                    Collection...</p>
             </div>
 
         </div>
