updated the About Me Preview Section

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -107,15 +107,13 @@
         <h2>About Me</h2>
 
         <div class="about-me-preview-area">
-            <img src="" alt="Malcolm Lismore Profile Pic">
+            <img src="resources/profile-pic.jpeg" alt="Malcolm Lismore Profile Pic">
             <div class="about-me-preview-info-with-button">
 
                 <p class="about-me-preview-info">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
-                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor. Sed eget diam
-                    euismod nibh pharetra elementum. Sed eget lorem urna. Nulla viverra eros porta lacus ultricies
-                    mattis. Fusce nec ante in augue tempus hendrerit. Donec at eros nec urna fringilla ullamcorper eget
-                    vel magna. Integer sit amet nulla quis enim vehicula pellentesque.
+                    I'm Malcolm Lismore, a freelance photographer on the North West coast of Scotland. I specialize in
+                    landscape and wildlife photography but am also available for weddings, portraits, and special
+                    events.
                 </p>
 
                 <!-- Read more about me button  -->
