--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <!-- Packages & Prices Section  -->
+    <!-- Packages & Prices Preview Section  -->
     <section class="packages-prices-preview">
 
         <!-- Section Title  -->
@@ -133,33 +133,35 @@
 
             <!-- Packages as Cards  -->
             <div class="packages-prices-card">
-                <h3 class="package-name">Package Name</h3>
-                <h4 class="package-price">50 $</h4>
+                <h3 class="package-name">Wedding Bliss Package</h3>
+                <h4 class="package-price">LKR 150,000</h4>
                 <p class="package-info">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
-                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+                    Comprehensive wedding coverage for up to 8 hours. Including, <br><br>✅Pre-ceremony, ceremony, and
+                    reception.
+                    <br>✅ 200 High-resolution edited images.<br>✅ An online gallery.<br>✅ Custom wedding album.
                 </p>
                 <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
-                <h3 class="package-name">Package Name</h3>
-                <h4 class="package-price">50 $</h4>
+                <h3 class="package-name">Graduation Memories Package</h3>
+                <h4 class="package-price"> LKR 50,000</h4>
                 <p class="package-info">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
-                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+                    A 2-hour session capturing the joy and celebration of graduation day. Including, <br><br>✅ 30
+                    High-resolution
+                    edited images.<br>✅ An online gallery.<br>✅ A framed 8x10 print.
                 </p>
                 <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
-                <h3 class="package-name">Package Name</h3>
-                <h4 class="package-price">50 $</h4>
+                <h3 class="package-name">Portrait Perfection Package</h3>
+                <h4 class="package-price"> LKR 25,000</h4>
                 <p class="package-info">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
-                    rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
+                    A 1-hour portrait session at a location of your choice. Including, <br><br>✅ 15 High-resolution edited images.
+                    <br>✅ An online gallery.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                    <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
 
         </div>
