--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -138,7 +138,7 @@
                 <p class="package-info">
                     Comprehensive wedding coverage for up to 8 hours. Including, <br><br>✅Pre-ceremony, ceremony, and
                     reception.
-                    <br>✅ 200 High-resolution edited images.<br>✅ An online gallery.<br>✅ Custom wedding album.
+                    <br><br>✅ 200 High-resolution edited images.<br><br>✅ An online gallery.<br><br>✅ Custom wedding album.
                 </p>
                 <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
@@ -149,7 +149,7 @@
                 <p class="package-info">
                     A 2-hour session capturing the joy and celebration of graduation day. Including, <br><br>✅ 30
                     High-resolution
-                    edited images.<br>✅ An online gallery.<br>✅ A framed 8x10 print.
+                    edited images.<br><br>✅ An online gallery.<br><br>✅ A framed 8x10 print.
                 </p>
                 <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
@@ -158,13 +158,15 @@
                 <h3 class="package-name">Portrait Perfection Package</h3>
                 <h4 class="package-price"> LKR 25,000</h4>
                 <p class="package-info">
-                    A 1-hour portrait session at a location of your choice. Including, <br><br>✅ 15 High-resolution edited images.
-                    <br>✅ An online gallery.
+                    A 1-hour portrait session at a location of your choice. Including, <br><br>✅ 15 High-resolution
+                    edited images.
+                    <br><br>✅ An online gallery.
                 </p>
-                    <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
 
         </div>
+        <br><br><br><br><br>
 
         <!-- Browse more Packages button  -->
         <a href=""><button class="my-button more-packages-button">More Packages</button></a>
@@ -196,6 +198,7 @@
 
     <!-- Linking With the JavaScript File  -->
     <script src="script-home-pg.js">Lorem</script>
+
 </body>
 
 </html>
