Updated the Subscribe Section & the Footer Section

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -138,7 +138,8 @@
                 <p class="package-info">
                     Comprehensive wedding coverage for up to 8 hours. Including, <br><br>✅Pre-ceremony, ceremony, and
                     reception.
-                    <br><br>✅ 200 High-resolution edited images.<br><br>✅ An online gallery.<br><br>✅ Custom wedding album.
+                    <br><br>✅ 200 High-resolution edited images.<br><br>✅ An online gallery.<br><br>✅ Custom wedding
+                    album.
                 </p>
                 <a href=""><button class="my-button select-package-button">Select</button></a>
             </div>
@@ -177,23 +178,27 @@
 
         <!-- Section Title  -->
         <h2>Subscribe for Updates</h2>
-        <p class="subscribe-info">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor
-            rhoncus nunc a mattis. Suspendisse maximus nisi sit amet sapien imperdiet auctor.
-        </p>
+        <div class="subscribe-form">
+            <p class="subscribe-info">
+                Stay updated with our newsletter. Type your email address and click on the subscribe button.
+            </p>
 
-        <!-- Subscribe Form  -->
-        <form>
-            <input required class="sub-email-input" type="email" id="sub-email">
-            <button type="submit" class="my-button sub-button" id="sub-button">Subscribe</button>
-        </form>
+            <!-- Subscribe Form  -->
+            <form class="sub-form-items">
 
+                <input required class="sub-email-input" type="email" id="sub-email">
+                <button type="submit" class="sub-button" id="sub-button">Subscribe</button>
+
+            </form>
+        </div>
     </section>
 
     <!-- Footer Section  -->
     <footer>
         <p class="footer-text">© Malcolm Lismore - 2024</p>
         <p class="footer-text">Developed By Saviska Jayawickrama</p>
+        <p class="footer-text">Made with ❤️</p>
+
     </footer>
 
     <!-- Linking With the JavaScript File  -->
