--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -35,8 +35,8 @@
         <!-- This is The Navigation Bar -->
         <div id="navigation-bar" class="navigation-bar">
             <nav>
-                <a href="" class="navigation-bar-items">Home</a>
-                <a href="" class="navigation-bar-items">About Me</a>
+                <a href="index.html" class="navigation-bar-items">Home</a>
+                <a href="about-me.html" class="navigation-bar-items">About Me</a>
                 <a href="" class="navigation-bar-items">Gallery</a>
                 <a href="" class="navigation-bar-items">Packages & Prices</a>
                 <a href="" class="navigation-bar-items">Contact Me</a>
@@ -117,7 +117,7 @@
                 </p>
 
                 <!-- Read more about me button  -->
-                <a href=""><button class="my-button read-more-about-me-button">Read More About Me</button></a>
+                <a href="about-me.html"><button class="my-button read-more-about-me-button">Read More About Me</button></a>
 
             </div>
         </div>
