Updated the about me page

--- a/Malcolm Lismore Photography/about-me.html
+++ b/Malcolm Lismore Photography/about-me.html
@@ -26,9 +26,21 @@
 
 <body>
 
+    <!-- This is The Navigation Bar -->
+    <div id="navigation-bar" class="navigation-bar">
+        <nav>
+            <a href="index.html" class="navigation-bar-items">Home</a>
+            <a href="about-me.html" class="navigation-bar-items">About Me</a>
+            <a href="" class="navigation-bar-items">Gallery</a>
+            <a href="" class="navigation-bar-items">Packages & Prices</a>
+            <a href="" class="navigation-bar-items">Contact Me</a>
+        </nav>
+    </div>
+
     <!-- About Me Section -->
     <section class="about-me">
         <h1>About Me</h1><br><br>
+        <img src="resources/profile-pic.jpeg" alt="Malcolm Lismore Profile Pic">
         <h3>Passionate Photographer of Scotland's Beauty</h3><br>
         <p>I am a freelance photographer based on the stunning North West coast of Scotland. My love for photography
             began with a deep appreciation for the region's rugged landscapes and diverse wildlife. Over the years, I
