created a new JS file for common functions...

--- a/Malcolm Lismore Photography/about-me.html
+++ b/Malcolm Lismore Photography/about-me.html
@@ -41,31 +41,33 @@
     <section class="about-me">
         <h1>About Me</h1><br><br>
         <img src="resources/profile-pic.jpeg" alt="Malcolm Lismore Profile Pic">
-        <h3>Passionate Photographer of Scotland's Beauty</h3><br>
+        <h3>Passionate Photographer of Scotland's Beauty</h3>
         <p>I am a freelance photographer based on the stunning North West coast of Scotland. My love for photography
             began with a deep appreciation for the region's rugged landscapes and diverse wildlife. Over the years, I
             have developed a strong portfolio that showcases my talent and passion for capturing nature's beauty.</p>
         <br>
 
-        <h3>Experience and Skills</h3><br>
+        <h3>Experience and Skills</h3>
         <p>With several years of experience in photography, I have a knack for capturing everything from the sweeping
             vistas of the Scottish Highlands to the intricate details of coastal wildlife. My work includes not only
             landscape and wildlife photography but also portraits, weddings, and special events.</p>
         <br>
 
-        <h3>A Love for Nature</h3><br>
+        <h3>A Love for Nature</h3>
         <p>My photography reflects my love for the natural world. I carefully observe my surroundings to create images
             that highlight the unique beauty of Scotland's landscapes and wildlife. My approach combines technical skill
             with a genuine passion for my subjects.</p>
         <br>
 
-        <h3>Versatile Services</h3><br>
+        <h3>Versatile Services</h3>
         <p>In addition to my nature photography, I offer services for weddings, portraits, and events. I bring the same
             level of dedication and creativity to every project, ensuring that each client's needs are met with
             professionalism and care.</p>
         <br>
 
     </section>
+
+
 
 </body>
 
