--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -202,6 +202,7 @@
     </footer>
 
     <!-- Linking With the JavaScript File  -->
+    <script src="common.js">Lorem</script>
     <script src="script-home-pg.js">Lorem</script>
 
 </body>
