updated the about me page

--- a/Malcolm Lismore Photography/about-me.html
+++ b/Malcolm Lismore Photography/about-me.html
@@ -40,7 +40,7 @@
     <!-- About Me Section -->
     <section class="about-me">
         <h1>About Me</h1><br><br>
-        <img src="resources/profile-pic.jpeg" alt="Malcolm Lismore Profile Pic">
+        <img class="about-me-img" src="resources/profile-pic.jpeg" alt="Malcolm Lismore Profile Pic">
         <h3>Passionate Photographer of Scotland's Beauty</h3>
         <p>I am a freelance photographer based on the stunning North West coast of Scotland. My love for photography
             began with a deep appreciation for the region's rugged landscapes and diverse wildlife. Over the years, I
@@ -63,11 +63,33 @@
         <p>In addition to my nature photography, I offer services for weddings, portraits, and events. I bring the same
             level of dedication and creativity to every project, ensuring that each client's needs are met with
             professionalism and care.</p>
-        <br>
+        
 
     </section>
 
+    <!-- Social Media part of the page. -->
+    <section class="social_media">
 
+        <h1>Connect with me via...</h1>
+
+        <div class="all_social_icon">
+            <a href="https://www.facebook.com/saviska.jayawickrama" target="_blank"><img src="resources/facebook_logo.png"
+                    class="social_icon" alt="Facebook Logo"></a>
+            <a href="https://www.linkedin.com/in/saviska-jayawickrama/" target="_blank"><img
+                    src="resources/linkedIn_logo.png" alt="LinkedIn" class="social_icon"></a>
+            <a href="https://www.instagram.com/saviska.jay/" target="_blank"><img src="resources/instagram_logo.png"
+                    alt="Instagram Logo" class="social_icon"></a>
+        </div>
+    </section>
+
+
+    <!-- Footer Section  -->
+    <footer>
+        <p class="footer-text">© Malcolm Lismore - 2024</p>
+        <p class="footer-text">Developed By Saviska Jayawickrama</p>
+        <p class="footer-text">Made with ❤️</p>
+
+    </footer>
 
 </body>
 
