Updated the prices

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -134,7 +134,7 @@
             <!-- Packages as Cards  -->
             <div class="packages-prices-card">
                 <h3 class="package-name">Wedding Bliss Package</h3>
-                <h4 class="package-price">LKR 150,000</h4>
+                <h4 class="package-price">USD 500</h4>
                 <p class="package-info">
                     Comprehensive wedding coverage for up to 8 hours. Including, <br><br>✅Pre-ceremony, ceremony, and
                     reception.
@@ -146,7 +146,7 @@
 
             <div class="packages-prices-card">
                 <h3 class="package-name">Graduation Memories Package</h3>
-                <h4 class="package-price"> LKR 50,000</h4>
+                <h4 class="package-price"> USD 250</h4>
                 <p class="package-info">
                     A 2-hour session capturing the joy and celebration of graduation day. Including, <br><br>✅ 30
                     High-resolution
@@ -157,7 +157,7 @@
 
             <div class="packages-prices-card">
                 <h3 class="package-name">Portrait Perfection Package</h3>
-                <h4 class="package-price"> LKR 25,000</h4>
+                <h4 class="package-price"> USD 100</h4>
                 <p class="package-info">
                     A 1-hour portrait session at a location of your choice. Including, <br><br>✅ 15 High-resolution
                     edited images.
