Made a Web Page for Gallery...HTML & CSS

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -37,7 +37,7 @@
             <nav>
                 <a href="index.html" class="navigation-bar-items">Home</a>
                 <a href="about-me.html" class="navigation-bar-items">About Me</a>
-                <a href="" class="navigation-bar-items">Gallery</a>
+                <a href="gallery-1.html" class="navigation-bar-items">Gallery</a>
                 <a href="" class="navigation-bar-items">Packages & Prices</a>
                 <a href="" class="navigation-bar-items">Contact Me</a>
             </nav>
@@ -55,7 +55,7 @@
     <section class="gallery-preview-section">
 
         <!-- Section Title  -->
-        <h2>Golden Captures</h2>
+        <h2>My Best Shots...</h2>
 
         <!-- Photos as Cards  -->
         <div class="gallery-cards-area">
@@ -96,7 +96,7 @@
         </div>
 
         <!-- view more in gallery button  -->
-        <a href=""><button class="my-button view-more-in-gallery-button">View More in Gallery</button></a>
+        <a href="gallery-1.html"><button class="my-button view-more-in-gallery-button">View More in Gallery</button></a>
 
     </section>
 
@@ -104,7 +104,7 @@
     <section class="about-me-preview">
 
         <!-- Section Title  -->
-        <h2>About Me</h2>
+        <h2>About Me...</h2>
 
         <div class="about-me-preview-area">
             <img src="resources/profile-pic.jpeg" alt="Malcolm Lismore Profile Pic">
@@ -127,7 +127,7 @@
     <section class="packages-prices-preview">
 
         <!-- Section Title  -->
-        <h2>Packages & Prices</h2>
+        <h2>Packages & Prices...</h2>
 
         <div class="packages-prices-preview-cards-area">
 
@@ -177,7 +177,7 @@
     <section class="subscribe-section">
 
         <!-- Section Title  -->
-        <h2>Subscribe for Updates</h2>
+        <h2>Subscribe for Updates...</h2>
         <div class="subscribe-form">
             <p class="subscribe-info">
                 Stay updated with our newsletter. Type your email address and click on the subscribe button.
