Add new pages for gallery

--- a/Malcolm Lismore Photography/gallery-3.html
+++ b/Malcolm Lismore Photography/gallery-3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <!-- This is the Web Page Title  -->
-    <title>Gallery - Mixed</title>
+    <title>Gallery - Landscapes & Wildlife Photos</title>
 
     <!-- Page Title Icon  -->
     <link rel="icon" type="image/png" href="resources/m-icon.png">
@@ -39,20 +39,19 @@
 
     <!-- This the Gallery -->
     <section class="Gallery">
-        <h1>My Favorite Captures...</h1>
+        <h1>My Favorite Landscapes & Wildlife Photos...</h1>
         <div class="container">
-            <img src="https://images.pexels.com/photos/459449/pexels-photo-459449.jpeg?auto=compress&cs=tinysrgb&w=600">
-            <img
-                src="https://images.pexels.com/photos/1130434/pexels-photo-1130434.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img src="https://images.pexels.com/photos/162256/wolf-predator-european-wolf-carnivores-162256.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img src="https://images.pexels.com/photos/1822603/pexels-photo-1822603.jpeg?auto=compress&cs=tinysrgb&w=600">
+            <img src="https://images.pexels.com/photos/3656636/pexels-photo-3656636.jpeg?auto=compress&cs=tinysrgb&w=600">
             <img src="resources/wildlife/Scotland1.jpg">
             <img src="resources/wildlife/Scotland2.jpg">
-            <img src="resources/wedding/WeddingPic1.jpg">
-            <img src="resources/wedding/WeddingPic2.jpg">
+            <img src="resources/wildlife/Scotland3.jpg">
         </div>
     </section>
     <h1>Discover More Photos...</h1>
     <a href="gallery-2.html"><button class="my-button">Wedding Photos</button></a>
-    <a href="gallery-3.html"><button class="my-button">Landscapes & Wildlife Photos</button></a>
+    <a href="gallery-1.html"><button class="my-button">My Favorite Captures</button></a>
     <a href="gallery-4.html"><button class="my-button">Celebration Photos</button></a>
 
     <!-- Footer Section  -->
