Packages & Prices page updated

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -38,8 +38,8 @@
                 <a href="index.html" class="navigation-bar-items">Home</a>
                 <a href="about-me.html" class="navigation-bar-items">About Me</a>
                 <a href="gallery-1.html" class="navigation-bar-items">Gallery</a>
-                <a href="" class="navigation-bar-items">Packages & Prices</a>
-                <a href="" class="navigation-bar-items">Contact Me</a>
+                <a href="packages-prices-pg.html" class="navigation-bar-items">Packages & Prices</a>
+                <a href="contact-me.html" class="navigation-bar-items">Contact Me</a>
             </nav>
         </div>
 
