Browse more Packages button updated

--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -170,7 +170,7 @@
         <br><br><br><br><br>
 
         <!-- Browse more Packages button  -->
-        <a href=""><button class="my-button more-packages-button">More Packages</button></a>
+        <a href="packages-prices-pg.html"><button class="my-button more-packages-button">More Packages</button></a>
     </section>
 
     <!-- Subscribe Section  -->
