select-package-button updated

--- a/Malcolm Lismore Photography/contact-me.html
+++ b/Malcolm Lismore Photography/contact-me.html
@@ -43,14 +43,25 @@
     <!-- Contact Me Form Section  -->
     <section class="contact-me-section">
         <h1>Contact Me</h1>
-        <h3>Contact us using this form. Fill out the fields and click the submit button.</h3>
+        <h3>Contact us and purchase your package. Fill out the fields and click the submit button.</h3>
         <form>
             <label for="first-name">First Name : </label>
             <input type="text" id="first-name" name="first-name">&nbsp; &nbsp;
             <label for="last-name">Last Name : </label>
             <input type="text" id="last-name" name="last-name"> <br><br><br>
+            <label for="tel-no">Telephone Number : </label>
+            <input type="tel" id="tel-no" name="tel-no"> <br><br><br>
             <label for="contact-form-email">Email Address : </label>
             <input type="email" id="contact-form-email" name="contact-form-email"><br><br><br>
+            <label for="package-list">Select Your Package : </label>
+            <select id="package-list" name="package-list">
+                <option value="Wedding Bliss Package - USD 500">Wedding Bliss Package - USD 500</option>
+                <option value="Graduation Memories Package - USD 250">Graduation Memories Package - USD 250</option>
+                <option value="Portrait Perfection Package - USD 100">Portrait Perfection Package - USD 100</option>
+                <option value="Event Extravaganza Package - USD 400">Event Extravaganza Package - USD 400</option>
+                <option value="Family Fun Package - USD 150">Family Fun Package - USD 150</option>
+                <option value="Nature's Beauty Package - USD 300">Nature's Beauty Package - USD 300</option>
+            </select><br><br><br>
             <label for="msg">Type Your Message Here : </label><br>
             <textarea  id="msg" name="msg" rows="10" ></textarea><br><br><br>
             <input class="my-button" type="submit" value="Submit">
