--- a/Malcolm Lismore Photography/packages-prices-pg.html
+++ b/Malcolm Lismore Photography/packages-prices-pg.html
@@ -58,7 +58,7 @@
                     <br><br>✅ 200 High-resolution edited images.<br><br>✅ An online gallery.<br><br>✅ Custom wedding
                     album.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -69,7 +69,7 @@
                     High-resolution
                     edited images.<br><br>✅ An online gallery.<br><br>✅ A framed 8x10 print.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -80,7 +80,7 @@
                     edited images.
                     <br><br>✅ An online gallery.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -93,7 +93,7 @@
                     <br><br>✅ An online gallery.
                     <br><br>✅ A custom photo book.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -104,7 +104,7 @@
                     High-resolution edited images.
                     <br><br>✅ An online gallery.<br><br>✅ A set of 5 prints (5x7).
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -115,7 +115,7 @@
                     Including,, <br><br>✅ 50 High-resolution edited images.
                     <br><br>✅ An online gallery.<br><br>✅ A high-quality canvas print (16x20).
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
         </div>
 
