--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -141,7 +141,7 @@
                     <br><br>✅ 200 High-resolution edited images.<br><br>✅ An online gallery.<br><br>✅ Custom wedding
                     album.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -152,7 +152,7 @@
                     High-resolution
                     edited images.<br><br>✅ An online gallery.<br><br>✅ A framed 8x10 print.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
             <div class="packages-prices-card">
@@ -163,7 +163,7 @@
                     edited images.
                     <br><br>✅ An online gallery.
                 </p>
-                <a href=""><button class="my-button select-package-button">Select</button></a>
+                <a href="contact-me.html"><button class="my-button select-package-button">Select</button></a>
             </div>
 
         </div>
