Updated the Footer

--- a/Malcolm Lismore Photography/about-me.html
+++ b/Malcolm Lismore Photography/about-me.html
@@ -87,7 +87,7 @@
     <footer>
         <p class="footer-text">© Malcolm Lismore - 2024</p>
         <p class="footer-text">Developed By Saviska Jayawickrama</p>
-        <p class="footer-text">Made with ❤️</p>
+        <p class="footer-text">❤️👨🏽‍💻❤️</p>
 
     </footer>
 
