--- a/Malcolm Lismore Photography/index.html
+++ b/Malcolm Lismore Photography/index.html
@@ -197,7 +197,7 @@
     <footer>
         <p class="footer-text">© Malcolm Lismore - 2024</p>
         <p class="footer-text">Developed By Saviska Jayawickrama</p>
-        <p class="footer-text">❤️👨🏽‍💻❤️</p>
+        <p class="footer-text"><a href="https://saviska-jay.github.io/" ><img src="https://i.gifer.com/yC.gif" width="10%"></a></p>
 
     </footer>
 
