--- a/Malcolm Lismore Photography/about-me.html
+++ b/Malcolm Lismore Photography/about-me.html
@@ -87,7 +87,7 @@
     <footer>
         <p class="footer-text">© Malcolm Lismore - 2024</p>
         <p class="footer-text">Developed By Saviska Jayawickrama</p>
-        <p class="footer-text"><a href="https://saviska-jay.github.io/" ><img src="https://i.gifer.com/yC.gif" width="10%"></a></p>
+        <p class="footer-text"><a href="https://saviska-jay.github.io/" ><img src="https://i.pinimg.com/originals/b0/f6/9b/b0f69bc06598a0cbb29c0e6d771aef4a.gif" width="10%"></a></p>
 
     </footer>
 
