--- a/Malcolm Lismore Photography/gallery-1.html
+++ b/Malcolm Lismore Photography/gallery-1.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+
     <!-- This is The Navigation Bar -->
     <div id="navigation-bar" class="navigation-bar">
         <nav>
@@ -33,10 +34,11 @@
             <a href="about-me.html" class="navigation-bar-items">About Me</a>
             <a href="gallery-1.html" class="navigation-bar-items">Gallery</a>
             <a href="packages-prices-pg.html" class="navigation-bar-items">Packages & Prices</a>
-            <a href="contact-me.html" class="navigation-bar-items">Contact Me</a>
+            <a href="contact-me.php" class="navigation-bar-items">Contact Me</a>
         </nav>
     </div>
 
+    
     <!-- This the Gallery -->
     <section class="Gallery">
         <h1>My Favorite Captures...</h1>
@@ -59,8 +61,6 @@
     <footer>
         <p class="footer-text">© Malcolm Lismore - 2024</p>
         <p class="footer-text">Developed By Saviska Jayawickrama</p>
-
-
     </footer>
 
 </body>
