--- a/Malcolm Lismore Photography/packages-prices-pg.html
+++ b/Malcolm Lismore Photography/packages-prices-pg.html
@@ -35,14 +35,13 @@
             <a href="about-me.html" class="navigation-bar-items">About Me</a>
             <a href="gallery-1.html" class="navigation-bar-items">Gallery</a>
             <a href="packages-prices-pg.html" class="navigation-bar-items">Packages & Prices</a>
-            <a href="contact-me.html" class="navigation-bar-items">Contact Me</a>
+            <a href="contact-me.php" class="navigation-bar-items">Contact Me</a>
         </nav>
     </div>
 
 
     <!-- Packages & Prices Section  -->
     <section class="packages-prices-preview">
-
         <!-- Section Title  -->
         <h1>Packages & Prices...</h1>
 
@@ -123,7 +122,7 @@
         <footer>
             <p class="footer-text">© Malcolm Lismore - 2024</p>
             <p class="footer-text">Developed By Saviska Jayawickrama</p>
-            <p class="footer-text"><a href="https://saviska-jay.github.io/" ><img src="https://i.pinimg.com/originals/b0/f6/9b/b0f69bc06598a0cbb29c0e6d771aef4a.gif" width="10%"></a></p>
+            <p class="footer-text"><a href="https://saviska-jay.github.io/" ><img src="https://i.pinimg.com/originals/b0/f6/9b/b0f69bc06598a0cbb29c0e6d771aef4a.gif" width="5%"></a></p>
 
 
         </footer>
