--- a/Malcolm Lismore Photography/gallery-4.html
+++ b/Malcolm Lismore Photography/gallery-4.html
@@ -33,7 +33,7 @@
             <a href="about-me.html" class="navigation-bar-items">About Me</a>
             <a href="gallery-1.html" class="navigation-bar-items">Gallery</a>
             <a href="packages-prices-pg.html" class="navigation-bar-items">Packages & Prices</a>
-            <a href="contact-me.html" class="navigation-bar-items">Contact Me</a>
+            <a href="contact-me.php" class="navigation-bar-items">Contact Me</a>
         </nav>
     </div>
 
